--- a/Pages/breakfast.html
+++ b/Pages/breakfast.html
@@ -32,7 +32,7 @@
             <div class="container">
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="dinners.html">Dinners</a></li>
+                    <li><a href="dinner.html">Dinners</a></li>
                     <li><a href="#" class="active">Breakfast</a></li>
                     <li><a href="desserts.html">Desserts</a></li>
                     <li><a href="about.html">About</a></li>
