--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                     <ul>
                         <li><a href="#" class="active">Home</a></li>
                         <li><a href="Pages/dinner.html">Dinners</a></li>
-                        <li><a href="#">Breakfast</a></li>
-                        <li><a href="#">Desserts</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="Pages/breakfast.html">Breakfast</a></li>
+                        <li><a href="Pages/desserts.html">Desserts</a></li>
+                        <li><a href="Pages/about.html">About</a></li>
                     </ul>
                 </div>
             </nav>
